--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -61,9 +61,38 @@ h6 {
 	overflow-wrap: break-word;
 }
 
+/* Import Standard font */
+@font-face {
+	font-family: 'Standard';
+	src: url('fonts/standard-book-webfont.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Standard';
+	src: url('fonts/standard-book-italic-webfont.woff2') format('woff2');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Standard';
+	src: url('fonts/standard-bold-webfont.woff2') format('woff2');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Standard';
+	src: url('fonts/standard-bold-italic-webfont.woff2') format('woff2');
+	font-weight: bold;
+	font-style: italic;
+}
+
 :root {
 	--ui-font: 'League Mono', 'supreme', 'barlow', 'iosevka', 'hk grotesk';
-	--sans-font: 'standard', 'supreme', 'barlow', 'iosevka', 'hk grotesk';
+	--sans-font: 'Standard', 'supreme', 'barlow', 'iosevka', 'hk grotesk';
 	--serif-font: 'Newsreader', 'Source Serif 4', 'gambetta', 'pt serif', 'noto serif';
 	--accent-font: 'standard', 'gambetta', 'pt serif', 'noto serif';
 	--dark: #121212;
