add identity + tech sections

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -98,6 +98,8 @@ h6 {
 	--dark: #121212;
 	--light: #f6f6f6;
 	--gutter: 20px;
+	--bg-color: var(--light);
+	--text-color: var(--dark);
 }
 
 /*
@@ -127,10 +129,10 @@ html {
 body {
 	margin: 0;
 	padding: 0;
-	background-color: var(--light);
+	background-color: var(--bg-color);
 	font-family: var(--sans-font);
 	font-size: 20px;
-	color: var(--dark);
+	color: var(--text-color);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -149,6 +151,14 @@ button {
 }
 
 /* Grid column utility classes */
+
+.grid-wrapper {
+	display: grid;
+	grid-template-columns: repeat(12, minmax(0, 1fr));
+	grid-auto-rows: minmax(min-content, max-content);
+	padding-bottom: 300px;
+}
+
 .full-width {
 	grid-column: 1 / -1;
 }
@@ -219,4 +229,7 @@ button {
 }
 .end12 {
 	grid-column-end: 12;
+}
+.end13 {
+	grid-column-end: -1;
 }
